# This file is part of the mem-rs distribution (https://github.com/FrankvdStam/mem-rs).
# Copyright (c) 2022 Frank van der Stam.
# https://github.com/FrankvdStam/mem-rs/blob/main/LICENSE
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, version 3.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "mem-rs"
version = "0.1.8"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/FrankvdStam/mem-rs"
repository = "https://github.com/FrankvdStam/mem-rs"
license-file = "LICENSE"
keywords = ["memory", "gamedev"]
categories = ["memory-management", "games", "development-tools"]
description = "pattern scanning and abstraction for pointers in memory of running processes"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Input_XboxController",
]